# SerDesSystemCProject

./: .gitignore  ANALYSIS_systemc_ams_vs_cpp.md  CMakeLists.txt  CONTEXT_FOR_RESUME.md  DEMO.md  FORTRAN_TO_PYTHON_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_systemc_ams_with_cpp.md  Makefile  OPTION_B_C_ANALYSIS.md  README.md  README_ZH.md  SCHEME_C_VALIDATION_REPORT.md  SIMPLE_EXPLANATION.md  VECTOR_FITTING_ALTERNATIVES.md  _verify_issues_1.md  _verify_issues_3.md  batch3_validation_results.json  channel_config_fixed.json  channel_config_pr.json  channel_config_pr12.json  channel_config_pr_500g.json  channel_config_pr_refitted.json  channel_config_pyvf.json  channel_config_quick.json  channel_config_refined.json  channel_config_simple.json  channel_pr_metadata.json  channel_pr_waveform.csv  channel_rational_metadata.json  channel_rational_waveform.csv  channel_state_space_metadata.json  channel_state_space_waveform.csv  check_poles.py  compare_time.py  debug_poles.py  fix_scikit_rf_vf.py  fix_scikit_rf_vf_v2.py  scheme_c_validation_results.json  test_config_impulse.json  (+12 more)
.kimi-dev/: progress.md  status.md
config/: channel_config.json  default.json  peters_ss_channel.json
docs/: CTLE_UPDATE_SUMMARY.md  MIGRATION_GUIDE_CTLE.md  checklist.md  eye_analyzer_api_reference.md  eye_analyzer_examples.md  features.json  progress.txt  review_report_channel_ch1.md  review_report_channel_ch2_attempt2.md  review_report_channel_ch4_attempt2.md  review_report_channel_ch6_attempt2.md  review_report_channel_ch8.md  review_report_mux_ch7_attempt7.md  review_report_mux_ch8_attempt1.md
docs/modules/: EyeAnalyzer.md  adaption.md  cdr.md  channel.md  clkGen.md  ctle.md  dfesummer.md  driver.md  ffe.md  mux.md  rx.md  sampler.md  tx.md  vga.md
docs/plans/: 2025-03-12-implementation-plan.md
docs/zh/: EyeAnalyzer.md  adaption.md  cdr.md  channel.md  clkGen.md  ctle.md  dfesummer.md  driver.md  ffe.md  mux.md  rx.md  sampler.md  tx.md  vga.md
eye_analyzer/: __init__.py  analyzer.py  core.py  interpolation.py  io.py  jitter.py  modulation.py  utils.py  visualization.py
eye_analyzer/ber/: __init__.py  analyzer.py  contour.py  qfactor.py  template.py
eye_analyzer/schemes/: __init__.py  base.py  golden_cdr.py  sampler_centric.py  statistical.py
eye_analyzer/statistical/: __init__.py  ber_calculator.py  isi_calculator.py  jitter_injector.py  noise_injector.py  pulse_response.py
include/ams/: adaption.h  biquad_filter.h  channel_sparam.h  channel_sparam_v2.h  dfe_adapt_tdf.h  dfe_dac.h  diff_to_single.h  rx_cdr.h  rx_ctle.h  rx_dfe.h  rx_dfe_summer.h  rx_sampler.h  rx_top.h  rx_vga.h  serdes_link_top.h  tx_driver.h  wave_generation.h
include/common/: parameters.h
scripts/: analyze_serdes_link.py  benchmark_channel.py  compare_frequency_response.py  compare_vf_ir.py  diagnose_issues.py  export_skrf_vf.py  plot_ctle_waveform.py  plot_dfe_eye.py  plot_dfe_taps.py  plot_tx_eye.py  process_sparam.py  requirements.txt  run_adaption_tests.sh  run_cdr_tests.sh  run_channel_validation.sh  run_clockgen_tests.sh  run_ctle_tests.sh  run_sampler_tests.sh  run_serdes_link.sh  run_single_test.sh  run_tx_driver_tests.sh  run_unit_tests.sh  setup_env.sh  validate_channel.py  validate_channel_model.py  vector_fitting.py  vector_fitting_py.py  verify_channel.py
src/ams/: adaption.cpp  biquad_filter.cpp  channel_sparam.cpp  clock_generation.cpp  dfe_adapt_tdf.cpp  diff_to_single.cpp  rx_cdr.cpp  rx_ctle.cpp  rx_dfe_summer.cpp  rx_sampler.cpp  rx_top.cpp  rx_vga.cpp  serdes_link_top.cpp  tx_driver.cpp  tx_top.cpp  wave_generation.cpp
src/cpp_channel/: pole_residue_filter.cpp  pole_residue_filter.h  python_binding.cpp
src/de/: config_loader.cpp
tb/: CMakeLists.txt  Makefile
tb/channel/: channel_sparam_tb.cpp  channel_sparam_v2_tb.cpp
tb/rx/: rx_link_helpers.h  rx_link_tb.cpp
tb/rx/cdr/: cdr_helpers.h  cdr_tran_tb.cpp
tb/rx/ctle/: ctle_helpers.h  ctle_tran_tb.cpp
tb/rx/sampler/: sampler_helpers.h  sampler_tran_tb.cpp
tb/rx/top/: rx_link_tb.cpp
tb/rx/vga/: vga_helpers.h  vga_tran_tb.cpp
tb/top/: nrz_link_config.h  nrz_link_tb.cpp  serdes_link_helpers.h  serdes_link_tb.cpp  simple_link_tb.cpp  simple_link_tb_副本.cpp
tb/tx/driver/: tx_driver_helpers.h  tx_driver_tran_tb.cpp
tb/tx/top/: tx_tran_tb.cpp
tests/: CMakeLists.txt  README.md  test_cpp_channel.cpp  test_freq_response_export.cpp  test_main.cpp  test_vector_fitting.py  test_vector_fitting_py.py
tests/channel/: test_sparam_load.cpp  test_sparam_load_simple.cpp
tests/data/: peters_test_config.json
tests/integration/: __init__.py  test_end_to_end.py  test_nrz_workflow.py  test_pam4_workflow.py
tests/unit/: adaption_test_common.h  cdr_test_common.h  clock_generation_test_common.h  rx_top_test_common.h  sampler_test_common.h  test_adaption_agc_basic.cpp  test_adaption_agc_convergence.cpp  test_adaption_agc_rate_limit.cpp  test_adaption_cdr_pi_antiwindup.cpp  test_adaption_cdr_pi_basic.cpp  test_adaption_cdr_pi_convergence.cpp  test_adaption_dfe_basic.cpp  test_adaption_dfe_lms.cpp  test_adaption_dfe_sign_lms.cpp  test_adaption_freeze_mechanism.cpp  test_adaption_mode_change.cpp  test_adaption_output_range.cpp  test_adaption_param_validation.cpp  test_adaption_port_connection.cpp  test_adaption_rollback.cpp  test_adaption_snapshot.cpp  test_adaption_threshold_basic.cpp  test_adaption_threshold_drift.cpp  test_adaption_threshold_hysteresis.cpp  test_adaption_update_count.cpp  test_analyzer.py  test_ber_analyzer.py  test_ber_calculator.py  test_ber_contour.py  test_cdr_basic.cpp  test_cdr_basic_functionality.cpp  test_cdr_debug_interface.cpp  test_cdr_edge_falling.cpp  test_cdr_edge_none.cpp  test_cdr_edge_rising.cpp  test_cdr_edge_threshold_config.cpp  test_cdr_edge_threshold_effect.cpp  test_cdr_edge_threshold_low.cpp  test_cdr_pai_config.cpp  test_cdr_pai_quantization.cpp  (+83 more)
tests/validation/: compare_with_pystateye.py  validation_report.md
